    for a single frame (Issue #1199 PR #1201)
  * Correct the display error of HydrogenBondAnalysis when start is not 0 or 
    step is not one.
  * Groups (atomgroup, residuegroup, and segmentgroup) have more operators,
    included set operators (Issue #726)
  * Universes built with Merge now use the MemoryReader (Issue #1251)

Fixes
  * Trajectory slicing made completely Pythonic (Issue #918 PR #1195)
  * Argument validation of dist_mat_to_vec is fixed (#597 PR #1183)
  * Give correct error when the topology file format is not recognized (Issue #982)
  * Give correct error when file doesn't exist/ has bad permissions (Issue #981)
  * Improvement of analysis/waterdynamics module (Issue #935)
  * Removed MDAnalysis.analysis.PDBToBinaryTraj (Issue #1035)
  * MDAnalysis.analysis.distances.between() is no longer broken
  * GROWriter resids now truncated properly (Issue #886)
  * reading/writing lambda value in trr files (Issue #859)
  * fix __iter__/next redundancy (Issue #869)
  * SingleFrameReader now raises StopIteration instead of IOError on calling
    next (Issue #869)
  * Display of Deprecation warnings doesn't affect other modules anymore (Issue #754)
  * Changed nframes to n_frames in analysis modules for consistency (Issue #890)
  * fixed incompatibility with newer matplotlib in analysis.hole
  * Fixed modules that improperly documented and/or used frame slicing
    defaults (#914)
  * Fixed same interRDF can be run twice (Issue #924)
  * Support for TPR files produced by Gromacs-2016 (Issue #932)
  * Fixed parsing PDB files with CONECT records to TER entries (Issue #936)
  * Fixed parsing PDB files with single entry in CONECT record (Issue #937)
  * Progress meters are now displayed as expected on jupyter notebooks
    (Issue #927)
  * Reset trajectory to 0 after sliced iteration (Issue #1031)
  * Fixed rotaxis returning NaN if a=b (Issue #1045)
  * Fixed align_principal_axis onto a principal axes (Issue #1045)